--- a/src/data/grammar/mtg/card-related/broad-card-classification.yaml
+++ b/src/data/grammar/mtg/card-related/broad-card-classification.yaml
@@ -10,4 +10,4 @@ cardClassificationModifier:
 cardClassificationBase:
 - cards
 - "#cardCategory.s#"
-- "#creatureTypes.s.capitalize#"
+- "#creatureTypes.s#"
