--- a/src/data/grammar/mtg/mtg-vocab.yaml
+++ b/src/data/grammar/mtg/mtg-vocab.yaml
@@ -5,3 +5,9 @@ itemOrCreatureType:
 creatureTypeOrCharacterClass:
 - "#creatureTypes#"
 - "#characterClass#"
+
+mtgThing:
+- "#deckArchOrCategory#"
+- "#randomAnyCard#"
+- "#format#"
+- "#cardCategory.s#"
