--- a/src/data/grammar/headlines/mtg-strategy-headline.yaml
+++ b/src/data/grammar/headlines/mtg-strategy-headline.yaml
@@ -97,7 +97,7 @@ stupidSolution:
 - 'purchasing #cardCopyCount# #copies# of #realBadCard# from our store [_howMuch:,for only #priceUSD#,for just #priceUSD#,for just #priceUSD# each]#_howMuch#'
 - 'adding "speed holes" to your #realPowerfulCard.s# with a hole punch'
 - "#verbStrictlyTransitiveGerund# your #realNormalCard.s# with a [_tool:telescope,band
-  saw,hammer,screwdriver,jackhammer,bolt cutters,pair of pliers]#_tool#"
+  saw,hammer,screwdriver,jackhammer,bolt cutter,pair of pliers]#_tool#"
 - "#verbSolutionGerund#"
 - "[_intimidate:polishing a gun in front of,muttering obscenities to yourself in front
   of,showing your basement meat locker to,sharpening your katana in front of,squeezing
