--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -11,7 +11,7 @@ headline:
 - "#strategyRealization#"
 - "#flavorRevelation#"
 - "#tournamentNews#"
-- "#playguide#"
+- "#playGuide#"
 - "#announcement#"
 - "#clickbait#"
 - "#headlineKeepOrMulligan#"
