--- a/src/data/grammar/vocab/cities.yaml
+++ b/src/data/grammar/vocab/cities.yaml
@@ -50,7 +50,9 @@
       "King of Prussia",
       "Kraków",
       "Malmö",
+      "Mar-a-Lago",
       "Mayberry",
+      "McMurdo",
       "Metro City",
       "Minsk",
       "Mogadishu",
@@ -81,6 +83,7 @@
       "Wakanda",
       "Winnipeg",
       "Whoville",
+      "Woodbury",
       "Yonkers"
   ]
 }
