--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -58,6 +58,7 @@
       "Solar Flare",
       "Superfriends",
       "Survival",
+      "Ponza",
       "#mtgColors# Devotion",
       "#deckNameNumber#-Rack",
       "#deckNameNumber#-Post",
@@ -107,6 +108,7 @@
     "Canadian",
     "Cat",
     "Deadguy",
+    "Ramunap",
     "Budget"
   ],
   "deckSuffix" : [
