--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -56,7 +56,7 @@ fromTheVaultGraphicAnnouncement:
 - "Wizards Announces: From the Vault: [_vaultContents:#_fromTheVaultVaultContents#]#_vaultContents.capitalizeAll# {htmlImg htmlImgString=`#fromTheVaultLogoImage#`}"
 
 duelDecksGraphicAnnouncement:
-- "[#_duelDecksCombatants#]Wizards Announces: Duel Decks: #_duelDecksCombatant1.capitalizeAll# vs. #_duelDecksCombatant2.capitalizeAll# {htmlImg htmlImgString=`#duelDecksLogoImage#` screenWidth=`2048` screenHeight=`400`}"
+- "[#_duelDecksCombatants#][_combatant1:#_duelDecksCombatant1#][_combatant2:#_duelDecksCombatant2#]Wizards Announces: Duel Decks: #_combatant1.capitalizeAll# vs. #_combatant2.capitalizeAll# {htmlImg htmlImgString=`#duelDecksLogoImage#` screenWidth=`2048` screenHeight=`400`}"
 
 novelSetGraphicAnnouncement:
 - 'Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset# #mtgSetLogoSplash#'
