--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -168,13 +168,14 @@
       "the only valid choice",
       "completely unplayable",
       "pure garbage",
-      "Tier 1.5",
+      "Tier [tier:0,1,1.5,2,2.5,3]#_tier#",
       "ban-worthy",
       "WotC's biggest mistake yet",
       "a trap",
       "positioned perfectly in the meta",
       "overhyped by singles retailers",
-      "illegal under tournament rules"
+      "[legality:legal,illegal,broken]#_legality# under tournament rules",
+      "viable once #randomRealCard# is [_outcome:banned,reprinted]#_outcome#"
   ],
   "deckLimitedArchetype": [
   	"aggro",
