--- a/src/data/grammar/headlines/tip-money.yaml
+++ b/src/data/grammar/headlines/tip-money.yaml
@@ -57,8 +57,8 @@ investingType:
 - cashing out
 
 investReason:
-- 'before #randomCardAlone# is [_fate:banned,restricted,unbanned][_in: in #format#,]#_fate##_in#'
-- 'before [_rotation:#cardSet# rotates,#cardSet# rotates from #format#][_fate:#_rotation#,#teaserCardSet# is released,#teaserCardSet# arrives on MTGO,#tournament#]#_fate#'
+- '[_prep:before,before,until,once] #randomCardAlone# is [_fate:banned,restricted,unbanned][_in: in #format#,]#_fate##_in#'
+- '[_prep:before [_rotation:#cardSet# rotates,#cardSet# rotates from #format#][_fate:#_rotation#,#teaserCardSet# is released,#teaserCardSet# arrives on MTGO,#tournament#]#_fate#'
 
 financialStakeholders:
 - online retailers
