--- a/src/data/grammar/headlines/tournament-news.yaml
+++ b/src/data/grammar/headlines/tournament-news.yaml
@@ -6,16 +6,16 @@ tournamentRound:
 - MOCS [_round:Quarterfinals,Semifinals,Finals]#_round#
 
 tournamentNews:
-# - 'Emergency Banning: #randomCardAlone.capitalize# Banned in #format#'
-# - "#randomCardAlone.capitalize# Banned in #format.capitalizeAll# After [winner:#deck#,#pro#]#winner.capitalizeAll# Wins #tournament.capitalizeAll#"
-# - "#tournamentRound#: #pro# vs. [_opp:#otherPersonality#,Evil #pro#,Cyborg #pro#,Baby #pro#,Bizarro #pro#,Dr. #pro# M.D.,a Cardboard Cutout of #pro#,#adj.a# #creatureTypes#]#_opp.capitalizeAll#"
-# - "[winner:#pro#,#deck#]#winner# #winWord# [where:at #tournament#,in #city#]#where#"
-# - 'Pro Tour #teaserCardSet# will be in #city#'
-# - '#pro#, after winning #event# with #deckVariation#: [_comment:It''s #deckDescription#.,#mtgCatchphrase.capitalize#]"#_comment#"'
-# - "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# [_rule:has been DQ'd from,has been suspended from,has been disqualified from,ejected from]#_rule# #event# for #disqualifyingAction#"
-# - "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #randomAnyCard# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
-# - "#pro# topdecks #randomAnyCard# to #verbDefeat# [_opponent:#pro#,#person#]#_opponent#[_when:,, in the finals, and win it all]#_when# #atTournamentInCity#"
-- "#mtgQuestionablePractice.capitalize# will be legal in #format# until [_when:#teaserCardSet# is released,next month,#CONTENT.randomUpcomingMonthDay#,#CONTENT.randomUpcomingMonthDay#]#_when#"
+- 'Emergency Banning: #randomCardAlone.capitalize# Banned in #format#'
+- "#randomCardAlone.capitalize# Banned in #format.capitalizeAll# After [winner:#deck#,#pro#]#winner.capitalizeAll# Wins #tournament.capitalizeAll#"
+- "#tournamentRound#: #pro# vs. [_opp:#otherPersonality#,Evil #pro#,Cyborg #pro#,Baby #pro#,Bizarro #pro#,Dr. #pro# M.D.,a Cardboard Cutout of #pro#,#adj.a# #creatureTypes#]#_opp.capitalizeAll#"
+- "[winner:#pro#,#deck#]#winner# #winWord# [where:at #tournament#,in #city#]#where#"
+- 'Pro Tour #teaserCardSet# will be in #city#'
+- '#pro#, after winning #event# with #deckVariation#: [_comment:It''s #deckDescription#.,#mtgCatchphrase.capitalize#]"#_comment#"'
+- "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# [_rule:has been DQ'd from,has been suspended from,has been disqualified from,ejected from]#_rule# #event# for #disqualifyingAction#"
+- "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #randomAnyCard# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
+- "#pro# topdecks #randomAnyCard# to #verbDefeat# [_opponent:#pro#,#person#]#_opponent#[_when:,, in the finals, and win it all]#_when# #atTournamentInCity#"
+- "#mtgQuestionablePractice.capitalize# will be legal in #format# until [_closeTime:next month,the end of the month,the end of the year,the next MTGO maintenance downtime,the next B&R announcement,the DCI determines otherwise,#occasion#][_when:#teaserCardSet# is released,#_closeTime#,#CONTENT.randomUpcomingMonthDay#,#CONTENT.randomUpcomingMonthDay#]#_when#"
 
 teamTournamentNews:
 - '[_series:Team Series,#format# team trios]#_series# #tournamentWonWord# by Team #team# #atTournamentInCity#'
