--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -26,6 +26,7 @@
       "Mike Flores#malePronouns#",
       "Rich Hagon#malePronouns#",
       "Conley Woods#malePronouns#",
+      "Sam Black#malePronouns#",
       "Urza#malePronouns#",
       "RoboRosewater#neutralPronouns#"
   ],
