--- a/src/data/grammar/mtg/gameplay/mtg-formats.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-formats.yaml
@@ -29,7 +29,9 @@
       "Legacy",
       "Commander",
       "Draft",
+      "Booster Draft",
       "Sealed",
+      "Sealed Deck",
       "Pauper",
       "Two-Headed Giant",
       "Constructed",
