--- a/src/data/grammar/mtg/mtg-sets.yaml
+++ b/src/data/grammar/mtg/mtg-sets.yaml
@@ -100,23 +100,32 @@
       "Ixalan",
       "Hour of Devastation",
       "Modern Masters",
-      "Eternal Masters"
+      "Iconic Masters",
+      "Eternal Masters",
+      "Explorers of Ixalan",
+      "Unstable"
+  ],
+  "standardCardSet": [
+      "Kaladesh",
+      "Aether Revolt",
+      "Amonkhet",
+      "Hour of Devastation",
+      "Ixalan",
+      "Rivals of Ixalan"
   ],
   "teaserCardSet": [
-      "Commander 2017",
+      "Commander 2018",
       "Masters 25",
       "Rivals of Ixalan",
-      "Explorers of Ixalan",
-      "Iconic Masters",
       "Dominaria",
-      "Unstable",
+      "Core 2019",
       "#codename#",
       "#novelCardSetName.capitalizeAll#"
   ],
   "codename": [
       "Spaghetti",
       "Meatballs",
-      "[_futureSet:Milk,Archery,Baseball]#_futureSet#"
+      "[_futureSet:Milk,Archery,Baseball,Cricket]#_futureSet#"
   ],
   "novelCardSetName": [
     "#planeBasedSet#",
